--- a/project.json
+++ b/project.json
@@ -10,14 +10,17 @@
       "executor": "@angular-devkit/build-angular:application",
       "outputs": ["{options.outputPath}"],
       "options": {
-        "outputPath": "dist/midapp",
+        "outputPath": "dist/bob",
         "index": "./src/index.html",
         "browser": "./src/main.ts",
         "polyfills": ["zone.js", "./src/polyfills.ts"],
         "tsConfig": "./tsconfig.app.json",
         "inlineStyleLanguage": "scss",
         "assets": ["./src/favicon.ico", "./src/assets"],
-        "styles": ["@angular/material/prebuilt-themes/purple-green.css", "./src/styles.scss"],
+        "styles": [
+          "@angular/material/prebuilt-themes/purple-green.css",
+          "./src/styles.scss"
+        ],
         "scripts": []
       },
       "configurations": {
@@ -48,10 +51,10 @@
       "executor": "@angular-devkit/build-angular:dev-server",
       "configurations": {
         "production": {
-          "buildTarget": "midapp:build:production"
+          "buildTarget": "bob:build:production"
         },
         "development": {
-          "buildTarget": "midapp:build:development"
+          "buildTarget": "bob:build:development"
         }
       },
       "defaultConfiguration": "development"
@@ -59,7 +62,7 @@
     "extract-i18n": {
       "executor": "@angular-devkit/build-angular:extract-i18n",
       "options": {
-        "buildTarget": "midapp:build"
+        "buildTarget": "bob:build"
       }
     }
   }
