--- a/project.json
+++ b/project.json
@@ -10,7 +10,7 @@
       "executor": "@angular-devkit/build-angular:application",
       "outputs": ["{options.outputPath}"],
       "options": {
-        "outputPath": "dist/bob",
+        "outputPath": "dist/midapp",
         "index": "./src/index.html",
         "browser": "./src/main.ts",
         "polyfills": ["zone.js", "./src/polyfills.ts"],
